<resources>
    <string name="app_name">DoanDiDong</string>
    <string name="editText_tendangnhap">Name</string>
    <string name="text_ten_dang_nhap">Tên đăng nhập</string>
    <string name="text_mat_khau">Mật khẩu</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="create_new_account">Create new account</string>
    <string name="sign_in_with">SIGN IN WITH</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="iconface">TODO</string>
    <string name="facebook">Facebook</string>
    <string name="icongoogle">TODO</string>
    <string name="google">Google</string>
    <string name="image_hoidap">TODO</string>
    <string name="quenmk">Quên mật khẩu ?</string>
    <string name="dangnhapvoi">ĐĂNG NHẬP VỚI</string>
    <string name="taotkmoi">Tạo tài khoản mới</string>
    <string name="dangnhap">ĐĂNG NHẬP</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="ten_dangnhap">Tên đăng nhập</string>
    <string name="laylaimk">Lấy lại mât khẩu</string>
    <string name="email">Email</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="hoidap">TODO</string>
    <string name="quanlytk">QUẢN LÝ TÀI KHOẢN</string>
    <string name="trochoimoi">TRÒ CHƠI MỚI</string>
    <string name="lichsu">LỊCH SỬ CHƠI</string>
    <string name="bangxephang">BẢNG XẾP HẠNG</string>
    <string name="muacredit">MUA CREDIT</string>
    <string name="nhaplaimk">Nhập lại mật khẩu</string>
    <string name="mk">Mật khẩu</string>
    <string name="tdn">Tên đăng nhập</string>
    <string name="capnhat">Button</string>
    <string name="cap_nhat">CẬP NHẬT</string>
    <string name="xacnhanmk">Xác nhận mật khẩu</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="dangky">ĐĂNG KÝ</string>
    <string name="ten_nguoichoi">Huy Nguyen</string>
    <string name="tien">2.000</string>
    <string name="tim1">TODO</string>
    <string name="tim2">TODO</string>
    <string name="tim3">TODO</string>
    <string name="tim4">TODO</string>
    <string name="tim5">TODO</string>
    <string name="diem">Điểm: 1.115</string>
    <string name="cauhoi">Câu hỏi</string>
    <string name="cauhoiso">9</string>
    <string name="cau_hoi">Đại ngu là quốc hiệu của triều đại nào ?</string>
    <string name="paA">A. Triều Ngô</string>
    <string name="paB">B. Triều Hồ</string>
    <string name="paC">C. Các chúa Nguyễn</string>
    <string name="paD">D. Nhà Tây Sơn</string>
    <string name="tennguoichoi">Huy Nguyen</string>
    <string name="sotien">2.000</string>
    <string name="lichsuchoi">Lịch Sử Chơi</string>
    <string name="bang_xephang">Bảng Xếp Hạng</string>
    <string name="so_tien">sotien</string>
    <string name="icon_avatar">TODO</string>
    <string name="ic_avatar">TODO</string>
    <string name="goi_01">TODO</string>
    <string name="goi_02">TODO</string>
    <string name="goi_03">TODO</string>
    <string name="goi_04">TODO</string>
    <string name="goi_05">TODO</string>
    <string name="goi_06">TODO</string>
    <string name="goi_07">TODO</string>
    <string name="goi_credit_01">TextView</string>
    <string name="goi_credit_02">TextView</string>
    <string name="goi_credit_03">TextView</string>
    <string name="goi_credit_04">TextView</string>
    <string name="goi_credit_05">TextView</string>
    <string name="goi_credit_06">TextView</string>
    <string name="goi_credit_07">TextView</string>
    <string name="goi_credit_08">TextView</string>
    <string name="gia1">50$</string>
    <string name="gia2">90$</string>
    <string name="gia3">135$</string>
    <string name="gia5">175$</string>
    <string name="goimua02">210$</string>
    <string name="giamua06">300$</string>
    <string name="goimua07">500$</string>
    <string name="change_question">TODO</string>
    <string name="loaidapansai">TODO</string>
    <string name="tuvan">TODO</string>
    <string name="goi">TODO</string>
    <string name="icon_kimcuong">TODO</string>
    <string name="mua_them_credit">100</string>
    <string name="icon_kimc">TODO</string>
    <string name="tien_game">2000</string>
    <string name="ten_nguoidung">huynguyen</string>
    <string name="email_nguoidung">huynguyen@gmail.com</string>
    <string name="diem_nc">Điểm:</string>
    <string name="sodiem">0</string>
    <string name="cau_hoi_game">Câu hỏi</string>
    <string name="khungsocau">1</string>
    <string name="chonlinhvuc">Chọn lĩnh vực</string>
    <string name="linhvuc1">Khoa học kỹ thuật</string>
    <string name="linhvuc2">Văn hóa - xã hội - nghệ thuật</string>
    <string name="linhvuc3">Lịch sử - Địa lý</string>
    <string name="linhvuc4">Thẻ thao</string>
    <string name="icon_kcuong">TODO</string>
    <string name="icon_kc">TODO</string>
    <string name="kimcuong_icon">TODO</string>
</resources>
