<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg1"
    tools:context=".GoiCredit">

    <ImageView
        android:id="@+id/goi_01"
        android:layout_width="124dp"
        android:layout_height="115dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/goi01"
        android:contentDescription="@string/goi_01" />

    <ImageView
        android:id="@+id/goi_02"
        android:layout_width="124dp"
        android:layout_height="115dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        app:layout_constraintStart_toEndOf="@+id/goi_01"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/goi02"
        android:contentDescription="@string/goi_02" />

    <ImageView
        android:id="@+id/goi_03"
        android:layout_width="124dp"
        android:layout_height="115dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/goi_02"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/goi03"
        android:contentDescription="@string/goi_04" />

    <ImageView
        android:id="@+id/goi_04"
        android:layout_width="124dp"
        android:layout_height="115dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goi_01"
        app:srcCompat="@drawable/goi04"
        android:contentDescription="@string/goi_07" />

    <ImageView
        android:id="@+id/goi_05"
        android:layout_width="124dp"
        android:layout_height="115dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toEndOf="@+id/goi_04"
        app:layout_constraintTop_toBottomOf="@+id/goi_02"
        app:srcCompat="@drawable/goi05"
        android:contentDescription="@string/goi_05" />

    <ImageView
        android:id="@+id/goi_06"
        android:layout_width="124dp"
        android:layout_height="115dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/goi_05"
        app:layout_constraintTop_toBottomOf="@+id/goi_03"
        app:srcCompat="@drawable/goi06"
        android:contentDescription="@string/goi_03" />

    <ImageView
        android:id="@+id/goi_07"
        android:layout_width="124dp"
        android:layout_height="115dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goi_04"
        app:srcCompat="@drawable/goi07"
        android:contentDescription="@string/goi_03" />

    <TextView
        android:id="@+id/txt_goi01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/gia1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/goi_04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goi_01" />

    <TextView
        android:id="@+id/txt_goi02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/gia2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/goi_06"
        app:layout_constraintStart_toEndOf="@+id/txt_goi01"
        app:layout_constraintTop_toBottomOf="@+id/goi_03" />

    <TextView
        android:id="@+id/txt_goi04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/gia5"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/goi_07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goi_04" />

    <TextView
        android:id="@+id/txt_goi05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/goimua02"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/goi_07"
        app:layout_constraintStart_toEndOf="@+id/txt_goi04"
        app:layout_constraintTop_toBottomOf="@+id/goi_05" />

    <TextView
        android:id="@+id/txt_goi06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        android:text="@string/giamua06"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toEndOf="@+id/txt_goi05"
        app:layout_constraintTop_toBottomOf="@+id/goi_06" />

    <TextView
        android:id="@+id/txt_goi07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:text="@string/goimua07"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goi_07" />

    <TextView
        android:id="@+id/txt_goi03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/gia3"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/goi_06"
        app:layout_constraintStart_toEndOf="@+id/txt_goi02"
        app:layout_constraintTop_toBottomOf="@+id/goi_03"
        app:layout_constraintVertical_bias="0.511" />


</androidx.constraintlayout.widget.ConstraintLayout>