<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg1"
    tools:context=".ManHinhTroChoi">

    <TextView
        android:id="@+id/textView_tennguoichoi"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="200dp"
        android:background="#2196F3"
        android:gravity="center_vertical"
        android:text="@string/tennguoichoi"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_sotien"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="#FF9800"
        android:gravity="center"
        android:text="@string/sotien"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView_tennguoichoi"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgtim1"
        android:layout_width="34dp"
        android:layout_height="19dp"
        android:layout_marginStart="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_tennguoichoi"
        app:layout_constraintStart_toStartOf="@+id/textView_tennguoichoi"
        app:layout_constraintTop_toTopOf="@+id/textView_tennguoichoi"
        app:srcCompat="@drawable/ic_tim1"
        android:contentDescription="@string/tim1" />

    <ImageView
        android:id="@+id/imgtim2"
        android:layout_width="34dp"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgtim1"
        app:layout_constraintStart_toStartOf="@+id/imgtim1"
        app:layout_constraintTop_toTopOf="@+id/imgtim1"
        app:srcCompat="@drawable/ic_tim1"
        android:contentDescription="@string/tim2" />

    <ImageView
        android:id="@+id/imgtim3"
        android:layout_width="34dp"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgtim2"
        app:layout_constraintStart_toStartOf="@+id/imgtim2"
        app:layout_constraintTop_toTopOf="@+id/imgtim2"
        app:srcCompat="@drawable/ic_tim1"
        android:contentDescription="@string/tim3" />

    <ImageView
        android:id="@+id/imgtim4"
        android:layout_width="34dp"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgtim3"
        app:layout_constraintStart_toStartOf="@+id/imgtim3"
        app:layout_constraintTop_toTopOf="@+id/imgtim3"
        app:srcCompat="@drawable/ic_tim1"
        android:contentDescription="@string/tim4" />

    <ImageView
        android:id="@+id/imgtim5"
        android:layout_width="34dp"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgtim4"
        app:layout_constraintStart_toStartOf="@+id/imgtim4"
        app:layout_constraintTop_toTopOf="@+id/imgtim4"
        app:srcCompat="@drawable/ic_tim2"
        android:contentDescription="@string/tim5" />

    <TextView
        android:id="@+id/textView_diem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/diem"
        android:textAlignment="viewStart"
        android:textColor="#9C27B0"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_tennguoichoi" />

    <TextView
        android:id="@+id/textView_lbcauhoi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/cauhoi"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_diem" />

    <TextView
        android:id="@+id/textView_cauhoiso"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:text="@string/cauhoiso"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_lbcauhoi" />

    <TextView
        android:id="@+id/textView_cauhoi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/cau_hoi"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_cauhoiso" />

    <TextView
        android:id="@+id/textView_paA"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="#03A9F4"
        android:gravity="center_vertical"
        android:text="@string/paA"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_cauhoi" />

    <TextView
        android:id="@+id/textView_paB"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="#03A9F4"
        android:gravity="center_vertical"
        android:text="@string/paB"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_paA" />

    <TextView
        android:id="@+id/textView_paC"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="#03A9F4"
        android:gravity="center"
        android:text="@string/paC"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_paB" />

    <TextView
        android:id="@+id/textView_paD"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="#03A9F4"
        android:gravity="center_vertical"
        android:text="@string/paD"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_paC" />

    <ImageView
        android:id="@+id/btnloaidapansai"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/loaidapansai"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView_paD"
        app:srcCompat="@drawable/classsic_b" />

    <ImageView
        android:id="@+id/btntuvan"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/tuvan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnloaidapansai"
        app:layout_constraintTop_toBottomOf="@+id/textView_paD"
        app:srcCompat="@drawable/classic_a" />

    <ImageView
        android:id="@+id/btngoi"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/goi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btntuvan"
        app:layout_constraintTop_toBottomOf="@+id/textView_paD"
        app:srcCompat="@drawable/classic_c" />

    <ImageView
        android:id="@+id/ic_kc"
        android:layout_width="36dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/icon_kc"
        app:layout_constraintBottom_toBottomOf="@+id/textView_sotien"
        app:layout_constraintStart_toEndOf="@+id/textView_sotien"
        app:layout_constraintTop_toTopOf="@+id/textView_sotien"
        app:srcCompat="@drawable/ic_kc" />

    <ImageView
        android:id="@+id/icon_kc"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/icon_kc"
        app:layout_constraintBottom_toBottomOf="@+id/btngoi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btngoi"
        app:layout_constraintTop_toTopOf="@+id/btngoi"
        app:srcCompat="@drawable/ic_kc" />

    <TextView
        android:id="@+id/muathemcredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mua_them_credit"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/icon_kc"
        app:layout_constraintEnd_toEndOf="@+id/icon_kc"
        app:layout_constraintStart_toStartOf="@+id/icon_kc" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnloaidapansai"
        app:layout_constraintEnd_toStartOf="@+id/btnloaidapansai"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnloaidapansai"
        app:srcCompat="@drawable/icon_change_question" />

</androidx.constraintlayout.widget.ConstraintLayout>