<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg1"
    tools:context=".LichSuChoi">

    <TextView
        android:id="@+id/textView_tennguoichoi"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="200dp"
        android:background="#2196F3"
        android:gravity="center_vertical"
        android:text="@string/tennguoichoi"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_sotien"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="#FF9800"
        android:gravity="center|center_vertical"
        android:text="@string/sotien"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_tennguoichoi"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_lichsuchoi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/lichsuchoi"
        android:textColor="#9C27B0"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="36dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_sotien"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_sotien"
        app:layout_constraintTop_toTopOf="@+id/textView_sotien"
        app:srcCompat="@drawable/ic_kc"
        android:contentDescription="@string/kimcuong_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>